turtleart.polygon6.Polygon6.scala.error
Compilation error:
Polygon6:8: error: ambiguous reference to overloaded definition,
both method / in class Int of type (x: Char)Int
and  method / in class Int of type (x: Byte)Int
match expected type ?
  droite(360./nbCotes)
             ^