turtleart.polygon6.Polygon6.scala.code
override def run() {
  polygon(6, 80)
}

def polygon(nbCotes:Int, taille:Int)
{
  avance(taille)
  droite(360./nbCotes)
}